# RustPageIndex

./: .gitignore  Cargo.toml  README.md  results.txt
data/: tree_index.json
data/corpus/: compression.txt  go.txt  python.txt  rust.txt  vector_databases.txt
src/: config.rs  document.rs  error.rs  indexer.rs  lib.rs  main.rs  persistence.rs  search.rs  tree.rs
src/eval/: benchmark.rs  dataset.rs  embeddings.rs  judge.rs  mod.rs  vector_search.rs
src/llm/: client.rs  mod.rs  prompts.rs
