[package]
name = "rust_page_indexer"
version = "0.2.0"
edition = "2024"
description = "An LLM-powered hierarchical tree indexing system for document search (Rust port of PageIndex)"
license = "MIT"

[features]
default = []
eval = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client for LLM API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = { version = "2.0", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# File system
walkdir = "2.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
directories = "5.0"  # For config file location

# Evaluation / Vector Search (optional)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.3", optional = true }
tokenizers = { version = "0.20", optional = true }

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
tempfile = "3.20"
tokio-test = "0.4"

[[bin]]
name = "page-indexer"
path = "src/main.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"
required-features = ["eval"]
